crates/uitest/fixtures/ty_check/must_use_precompile_result.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/must_use_precompile_result.fe
---
error[8-0082]: unused value of type `Result<PrecompileError, u256>`
  ┌─ must_use_precompile_result.fe:5:5
  │
5 │     sha256(ptr::MemBuffer::empty())
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use this value or explicitly discard it with `let _ = ...`
  │
  = this type is marked `#[must_use]`
